--- a/src/app/daily-rate/daily-rate.component.html
+++ b/src/app/daily-rate/daily-rate.component.html
@@ -1,10 +1,10 @@
 <div class="left-side">
   <h1 class="greetings">
-    Хаю-хай👋👋
+    Привіт💧
   </h1>
 
   <p class="daily-rate-label">
-    Ваша дневная норма воды
+    Ваша денна норма води:
   </p>
 
   <div class="daily-rate-container">
@@ -23,7 +23,7 @@
         <input
           class='daily-rate-input'
           [formControl]="rate"
-          placeholder="Type amount here..."
+          placeholder="Type amount here in ml..."
         />
         <button (click)="submit()" type="button">
           <img src="assets/pencil.svg" />
@@ -36,7 +36,7 @@
         (click)="startEditing()"
       >
       <img src="assets/pencil.svg" />
-        Изменить
+        Змінити об'єм
       </button>
   </div>
 </div>
